tests/parse-errors/general/templated_destructor_removed.cx
struct Lifetime<T> {};

~Lifetime<int>(this) {}
